src/objects/MYBZ_Region_Rollup__c.object
<CustomObject>
    <fields>
        <fullName>DDD_Dollars_1M__c</fullName>
        <label>DDD Dollars 1M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DDD_Dollars_3M__c</fullName>
        <label>DDD Dollars 3M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DDD_Dollars_6M__c</fullName>
        <label>DDD Dollars 6M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataload_Id__c</fullName>
        <externalId>true</externalId>
        <label>Dataload Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gross_Margin_1M__c</fullName>
        <label>Gross Margin 1M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_3M__c</fullName>
        <label>Gross Margin 3M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_6M__c</fullName>
        <label>Gross Margin 6M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IHS_Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IHS Division</label>
        <referenceTo>MYBZ_IHS_Division__c</referenceTo>
        <relationshipLabel>Region Rollup</relationshipLabel>
        <relationshipName>Region_Rollup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NRx_1M__c</fullName>
        <label>NRx 1M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRx_3M__c</fullName>
        <label>NRx 3M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRx_6M__c</fullName>
        <label>NRx 6M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Profit_1M__c</fullName>
        <label>Net Profit 1M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Profit_3M__c</fullName>
        <label>Net Profit 3M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Profit_6M__c</fullName>
        <label>Net Profit 6M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Sales_1M__c</fullName>
        <label>Net Sales 1M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Sales_3M__c</fullName>
        <label>Net Sales 3M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Sales_6M__c</fullName>
        <label>Net Sales 6M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Sales_Start_Date_1M__c</fullName>
        <label>Net Sales Start Date 1M</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Net_Sales_Start_Date_3M__c</fullName>
        <label>Net Sales Start Date 3M</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Net_Sales_Start_Date_6M__c</fullName>
        <label>Net Sales Start Date 6M</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OPEX_1M__c</fullName>
        <label>OPEX 1M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPEX_3M__c</fullName>
        <label>OPEX 3M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPEX_6M__c</fullName>
        <label>OPEX 6M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRx_1M__c</fullName>
        <label>TRx 1M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRx_3M__c</fullName>
        <label>TRx 3M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRx_6M__c</fullName>
        <label>TRx 6M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
</CustomObject>